tooltips fixed position for now, div overflow fixed, buttons added to mobile hompage, css edits

--- a/_sass/general.scss
+++ b/_sass/general.scss
@@ -213,8 +213,10 @@ a.orange-text:visited {
 }
 
 .wrapped {
+  word-wrap: break-word;
   overflow-wrap: break-word;
   word-break: break-word;
+  overflow: auto;
 }
 
 .yellow {
